--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,47 @@
-.logo {
-  height: 300px;
-  position: absolute;
-  margin: 110px;
+ul{
+  text-align: right;
+  margin: 20px 20px 0 0;
 }
+li {
+  display: inline;
+  list-style-type: none;
+  padding: 6px;
+}
+
+li a {
+text-decoration: none;
+color: #555555;
+font-size: 13px;
+font-family: sans-serif;
+}
+i {
+  color: #555555;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.logoimage {
+  height: 250px;
+  margin-bottom: -40px;
+}
+
 .searchbar{
-  position: absolute;
-  margin: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+  }
+
+form {
+  	margin:0 auto;
+}
+.search {
+	padding:6px 10px 6px 30px;
+	margin:3px;
+  width: 400px;
+  font-size: 25px;
+  box-shadow: 1px 1px 5px #888888;
+  border: 0px;
 }
