--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,8 +24,10 @@ i {
 }
 
 .logoimage {
-  height: 250px;
-  margin-bottom: -40px;
+  height: 220px;
+  margin-bottom: -30px;
+  margin-left: 110px;
+  margin-top: 90px;
 }
 
 .searchbar{
@@ -39,9 +41,9 @@ form {
 }
 .search {
 	padding:6px 10px 6px 30px;
-	margin:3px;
+	margin-left: 110px;
   width: 400px;
   font-size: 25px;
-  box-shadow: 1px 1px 5px #888888;
+  box-shadow: 0px 1px 5px #888888;
   border: 0px;
 }
