--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,6 @@ i {
 .logoimage {
   height: 220px;
   margin-bottom: -30px;
-  margin-left: 110px;
   margin-top: 90px;
 }
 
@@ -41,9 +40,33 @@ form {
 }
 .search {
 	padding:6px 10px 6px 30px;
-	margin-left: 110px;
-  width: 400px;
-  font-size: 25px;
+	margin-left: 30px;
+  width: 550px;
+  font-size: 30px;
   box-shadow: 0px 1px 5px #888888;
   border: 0px;
+}
+.foot-bg {
+  background-color: #dddddd;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display:block;
+}
+.footbar {
+  display: inline;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.l-foot {
+  float: left;
+  margin-left: -30px;
+}
+.r-foot {
+  float: right;
+  margin-right: 6px;
+}
+.footnav {
+  padding: 13px;
 }
