--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,27 +46,43 @@ form {
   box-shadow: 0px 1px 5px #888888;
   border: 0px;
 }
-.foot-bg {
-  background-color: #dddddd;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  display:block;
+
+
+.wrapper {
+position: relative;
+background-color: #dddddd;
+
 }
 .footbar {
-  display: inline;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+  
+max-height: 90px;
+display: inline;
+  
+position: fixed;
+bottom: 0;
+  
+width: 100%;
+
 }
+
 .l-foot {
-  float: left;
-  margin-left: -30px;
+  
+float: left;
+  
+margin-left: -30px;
+
 }
+
 .r-foot {
-  float: right;
-  margin-right: 6px;
+  
+float: right;
+  
+margin-right: 6px;
+
 }
+
 .footnav {
-  padding: 13px;
+  
+padding: 13px;
+
 }
