--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,71 +1,88 @@
-body {
-	margin: 0;
+ul{
+  text-align: right;
+  margin: 20px 20px 0 0;
 }
-.navbar {
-	box-shadow: 0px 2px 3px rgba(88, 88, 88, 0.5);
-	height: 60px;
-	width: 100%;
-	position: fixed;
-	
+li {
+  display: inline;
+  list-style-type: none;
+  padding: 6px;
 }
-.left-nav {
-	display: inline;
-	margin: 20px;
-	float: left;
+
+li a {
+text-decoration: none;
+color: #555555;
+font-size: 13px;
+font-family: sans-serif;
 }
-#.left-nav a{
-	padding: 60px;
+i {
+  color: #555555;
 }
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.logoimage {
+  height: 220px;
+  margin-bottom: -30px;
+  margin-top: 90px;
+}
+
+.searchbar{
+  display: flex;
+  align-items: center;
+  justify-content: center
+  }
+
 form {
-	display: inline;
-	margin: 20px;
-	width: 70px;
-}
-.searchbar {
-	margin: 15px;
-	float: left;
-	display: inline;
-	padding: -20px;
+  	margin:0 auto;
 }
 .search {
-	width: 500px;
-	font-size: 16px;
-	padding: 5px;
-	border: 1px solid #dddddd;
-}
-.search-button {
-	padding: 6px 20px;
-	background-color: #f5f5f5;
-	color: #888888;
-	border: 1px solid #dddddd;
+	padding:6px 10px 6px 30px;
+	margin-left: 30px;
+  width: 550px;
+  font-size: 30px;
+  box-shadow: 0px 1px 5px #888888;
+  border: 0px;
 }
 
-.navbar ul {
-list-style-type: none;
+
+.wrapper {
+position: relative;
+background-color: #dddddd;
+
+}
+.footbar {
+  
+max-height: 90px;
+display: inline;
+  
+position: fixed;
+bottom: 0;
+  
+width: 100%;
+
+}
+
+.l-foot {
+  
+float: left;
+  
+margin-left: -30px;
+
+}
+
+.r-foot {
+  
 float: right;
-display: inline;
-margin: 20px;
+  
+margin-right: 6px;
 
 }
-.navbar li {
-display: inline;
-padding: 10px;
-}
-a {
-	text-decoration: none;
-	font-family: sans-serif;
-	color: #888888;
-}
 
-#sign-in {
-	color: orange;
-	font-size: 18px;
-}
-.video {
-	align-items: center;
-	justify-content: center;
-	display: flex;
-}
-.title {
-	text-align: center;
+.footnav {
+  
+padding: 13px;
+
 }
